// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SHEETER $WIDTHS ## NATIVE ## 01 empty 1`] = `
Array [
  Array [
    "color: green /*.[0]*/",
  ],
]
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 02 simple 1`] = `
Array [
  Array [
    "color: red /*./$width*/",
  ],
]
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 01: native, 300 1`] = `
Array [
  Array [
    "color: red /*/$width*/",
  ],
]
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 01: native, 300 2`] = `
Object {
  "color": Object {
    "tracePath": "/$width",
    "value": "red",
  },
}
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 01: native, 300 3`] = `
Object {
  "color": "red",
}
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 02: native, 640 1`] = `
Array [
  Array [
    "color: green /*/$width*/",
  ],
]
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 02: native, 640 2`] = `
Object {
  "color": Object {
    "tracePath": "/$width",
    "value": "green",
  },
}
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 02: native, 640 3`] = `
Object {
  "color": "green",
}
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 03: native, 1024 1`] = `
Array [
  Array [
    "color: blue /*/$width*/",
  ],
]
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 03: native, 1024 2`] = `
Object {
  "color": Object {
    "tracePath": "/$width",
    "value": "blue",
  },
}
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 03: native, 1024 3`] = `
Object {
  "color": "blue",
}
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 04: native, undefined 1`] = `null`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 04: native, undefined 2`] = `null`;

exports[`SHEETER $WIDTHS ## NATIVE ## 03 toClassNamesWithQuery's width change 04: native, undefined 3`] = `undefined`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 01 use just width styles 1`] = `
<div>
  <div
    data-style-trace="
color: red /*.[0]/$width*/"
    style="color: red;"
  >
    rendered: 1x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 01 use just width styles 2`] = `
<div>
  <div
    data-style-trace="
color: green /*.[1]/$width*/"
    style="color: green;"
  >
    rendered: 2x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 01 use just width styles 3`] = `
<div>
  <div
    data-style-trace="
color: blue /*.[2]/$width*/"
    style="color: blue;"
  >
    rendered: 3x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 02 use width flags and styles 1`] = `
<div>
  <div
    data-style-trace="
color: red /*.[0]/$width*/"
    style="color: red;"
  >
    mobile (rendered: 1x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 02 use width flags and styles 2`] = `
<div>
  <div
    data-style-trace="
color: green /*.[1]/$width*/"
    style="color: green;"
  >
    tablet (rendered: 2x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 02 use width flags and styles 3`] = `
<div>
  <div
    data-style-trace="
color: blue /*.[2]/$width*/"
    style="color: blue;"
  >
    desktop (rendered: 3x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 01 empty 1`] = `
Array [
  Array [
    ".a { color:green /*.[0]*/ }",
  ],
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 02 simple 1`] = `
Array [
  Array [
    "@media (min-width: 640px) and (max-width: 1023px).a { color:red /*./$width*/ }",
  ],
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 01: native, 300 1`] = `
Array [
  Array [
    "@media (max-width: 639px).a { color:red /*/$width*/ }",
  ],
  Array [
    "@media (min-width: 640px) and (max-width: 1023px).b { color:green /*/$width*/ }",
  ],
  Array [
    "@media (min-width: 1024px).c { color:blue /*/$width*/ }",
  ],
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 01: native, 300 2`] = `
Array [
  "@media (min-width: 1024px).c { color:blue /*/$width*/ }",
  "@media (min-width: 640px) and (max-width: 1023px).b { color:green /*/$width*/ }",
  "@media (max-width: 639px).a { color:red /*/$width*/ }",
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 01: native, 300 3`] = `"c b a"`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 02: native, 640 1`] = `
Array [
  Array [
    "@media (max-width: 639px).a { color:red /*/$width*/ }",
  ],
  Array [
    "@media (min-width: 640px) and (max-width: 1023px).b { color:green /*/$width*/ }",
  ],
  Array [
    "@media (min-width: 1024px).c { color:blue /*/$width*/ }",
  ],
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 02: native, 640 2`] = `
Array [
  "@media (min-width: 1024px).c { color:blue /*/$width*/ }",
  "@media (min-width: 640px) and (max-width: 1023px).b { color:green /*/$width*/ }",
  "@media (max-width: 639px).a { color:red /*/$width*/ }",
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 02: native, 640 3`] = `"c b a"`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 03: native, 1024 1`] = `
Array [
  Array [
    "@media (max-width: 639px).a { color:red /*/$width*/ }",
  ],
  Array [
    "@media (min-width: 640px) and (max-width: 1023px).b { color:green /*/$width*/ }",
  ],
  Array [
    "@media (min-width: 1024px).c { color:blue /*/$width*/ }",
  ],
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 03: native, 1024 2`] = `
Array [
  "@media (min-width: 1024px).c { color:blue /*/$width*/ }",
  "@media (min-width: 640px) and (max-width: 1023px).b { color:green /*/$width*/ }",
  "@media (max-width: 639px).a { color:red /*/$width*/ }",
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 03: native, 1024 3`] = `"c b a"`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 04: native, undefined 1`] = `
Array [
  Array [
    "@media (max-width: 639px).a { color:red /*/$width*/ }",
  ],
  Array [
    "@media (min-width: 640px) and (max-width: 1023px).b { color:green /*/$width*/ }",
  ],
  Array [
    "@media (min-width: 1024px).c { color:blue /*/$width*/ }",
  ],
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 04: native, undefined 2`] = `
Array [
  "@media (min-width: 1024px).c { color:blue /*/$width*/ }",
  "@media (min-width: 640px) and (max-width: 1023px).b { color:green /*/$width*/ }",
  "@media (max-width: 639px).a { color:red /*/$width*/ }",
]
`;

exports[`SHEETER $WIDTHS ## WEB ## 03 toClassNamesWithQuery's width change 04: native, undefined 3`] = `"c b a"`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 01 use just width styles 1`] = `
<div>
  <div
    class="c b a"
    data-class-trace="
@media (min-width: 1024px).c { color:blue /*.[2]/$width*/ }
@media (min-width: 640px) and (max-width: 1023px).b { color:green /*.[1]/$width*/ }
@media (max-width: 639px).a { color:red /*.[0]/$width*/ }"
  >
    rendered: 1x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 01 use just width styles 2`] = `
<div>
  <div
    class="c b a"
    data-class-trace="
@media (min-width: 1024px).c { color:blue /*.[2]/$width*/ }
@media (min-width: 640px) and (max-width: 1023px).b { color:green /*.[1]/$width*/ }
@media (max-width: 639px).a { color:red /*.[0]/$width*/ }"
  >
    rendered: 1x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 01 use just width styles 3`] = `
<div>
  <div
    class="c b a"
    data-class-trace="
@media (min-width: 1024px).c { color:blue /*.[2]/$width*/ }
@media (min-width: 640px) and (max-width: 1023px).b { color:green /*.[1]/$width*/ }
@media (max-width: 639px).a { color:red /*.[0]/$width*/ }"
  >
    rendered: 1x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 02 use width flags and styles 1`] = `
<div>
  <div
    class="c b a"
    data-class-trace="
@media (min-width: 1024px).c { color:blue /*.[2]/$width*/ }
@media (min-width: 640px) and (max-width: 1023px).b { color:green /*.[1]/$width*/ }
@media (max-width: 639px).a { color:red /*.[0]/$width*/ }"
  >
    mobile (rendered: 1x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 02 use width flags and styles 2`] = `
<div>
  <div
    class="c b a"
    data-class-trace="
@media (min-width: 1024px).c { color:blue /*.[2]/$width*/ }
@media (min-width: 640px) and (max-width: 1023px).b { color:green /*.[1]/$width*/ }
@media (max-width: 639px).a { color:red /*.[0]/$width*/ }"
  >
    tablet (rendered: 2x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 02 use width flags and styles 3`] = `
<div>
  <div
    class="c b a"
    data-class-trace="
@media (min-width: 1024px).c { color:blue /*.[2]/$width*/ }
@media (min-width: 640px) and (max-width: 1023px).b { color:green /*.[1]/$width*/ }
@media (max-width: 639px).a { color:red /*.[0]/$width*/ }"
  >
    desktop (rendered: 3x)
  </div>
</div>
`;
